--- a/index1.html
+++ b/index1.html
@@ -56,7 +56,7 @@
             <img src="img/chart.png" alt="">
         </div>
         <div class="clearfix"></div>
-        <a href="blank.html" class="next">Next</a>
+        <a href="index2.html" class="next">Next</a>
         <p>50%</p>
         <div class="one">
             <div class="progress"></div>
