--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 	
 	<body>
 		<div id="wrapper">
-			<section id="interface" role="main">
+			<section id="interface" role="main" class="col">
 				<div id="question1" class="question"></div>
 				<div id="answer1" class="answer">
 					<span class="agree">Strongly Disagree</span>
@@ -371,7 +371,7 @@
 				<button id="retake" class="button" onclick="window.location.reload();">Retake Quiz</button>
 				
 			</section>
-			<section id="display">
+			<section class="col" id="display">
 				<div class="radarChart" id="footprintDisplay"></div>
 			</section>
 			<hr />
