Initial CSS Changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,30 @@
 			};
 		</script>
 		<style>
-		
+			/* BEGIN MB */
+
+			div#instructions {
+			    text-align: center;
+			    margin-top: 5em;
+			    font-weight: 800;
+			}
+
+			header {
+			    height: 10vh;
+			    padding:10px;
+			}
+
+			#logo {
+			    content: "";
+			    display: inline-block;
+			    height: 100%;
+			    width: auto;
+			    vertical-align: middle;
+			}
+
+			/* END MB */
+			
+			
 			body {
 				font: normal 14px/15px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 				margin: 0px;
