--- a/index.html
+++ b/index.html
@@ -23,15 +23,27 @@
 		</script>
 		<style>
 			/* BEGIN MB */
-
+			
 			div#instructions {
 			    text-align: center;
 			    margin-top: 5em;
-			    font-weight: 800;
+			    font-weight: 300;
+			}
+
+			.question {
+			    font-size:2em;
+			    padding:1em;
+			    text-align: center;
+			    font-weight: 900;
+			}
+
+			.answer {
+			    text-align: center;
+			    font-size: 15px;
 			}
 
 			header {
-			    height: 10vh;
+			    height: 14vh;
 			    padding:10px;
 			}
 
@@ -41,6 +53,26 @@
 			    height: 100%;
 			    width: auto;
 			    vertical-align: middle;
+			}
+
+			button#nextBtn {
+			    margin: 0 auto;
+			    display: block;
+			    background: #c92738;
+			    color: white;
+			    font-size: 2em;
+			    padding: 15px;
+			    border-radius: 30px;
+			    -webkit-transition: background-color .5s ease-out;
+			    -moz-transition: background-color .5s ease-out;
+			    -o-transition: background-color .5s ease-out;
+			    transition: background-color .5s ease-out;
+			}
+
+
+			button#nextBtn:hover {
+			    background: #350c0c;
+			    color: white;
 			}
 
 			/* END MB */
