--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 			    color: white;
 			}
 
+			path.radarArea {
+			    opacity: .9;
+			}
+
+			path.radarArea:hover {
+			    opacity: .7;
+			}
+
 			/* END MB */
 			
 			
