--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			
 			div#instructions {
 			    text-align: center;
-			    margin-top: 5em;
+			    margin-top: 2em;
 			    font-weight: 300;
 			}
 
@@ -35,6 +35,7 @@
 			    padding:1em;
 			    text-align: center;
 			    font-weight: 900;
+			    line-height:1em;
 			}
 
 			.answer {
@@ -81,6 +82,11 @@
 
 			path.radarArea:hover {
 			    opacity: .7;
+			}
+
+			div#progressBar {
+			    text-align: center;
+			    padding: 10px;
 			}
 
 			/* END MB */
