Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				color: #fff;
 			}
 			#logo {
-				padding-left: 15px;
+				padding: 15px;
 			}
 			#footprintDisplay {
 				margin-top: 50px;
@@ -393,7 +393,7 @@
 		</style>
 		
 		<header>
-			<img id="logo" src="img/logo.png" width="50" alt = "IMS440D - Footprint"/>Footprint
+			<img id="logo" src="img/logo.png" width="50" alt = "IMS440D - Footprint"/><span class="headerTitle">Footprint</span>
 			<!-- src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8" -->
 		</header>
 		
