--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			    vertical-align: middle;
 			}
 
-			button#nextBtn {
+			button {
 			    margin: 0 auto;
 			    display: block;
 			    background: #c92738;
@@ -71,7 +71,7 @@
 			}
 
 
-			button#nextBtn:hover {
+			button:hover {
 			    background: #350c0c;
 			    color: white;
 			}
