--- a/index.html
+++ b/index.html
@@ -524,7 +524,10 @@
 					<span class="disagree" name="q3Ans">Strongly Agree</span>
 				</div>
 				<br><br>
-				<div id="progressBar" class="progressBar"></div>
+				<div class="progress">
+					<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+				</div>
+				<br><br>
 				<button id="nextBtn" class="button">&nbsp;Continue<svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z" clip-rule="evenodd"/></svg></button>
 				<button id="submit" class="button">View Results</button>
 			</section>
@@ -591,6 +594,7 @@
 		$("#resultsDescription").hide();
 		$("#submit").hide();
 		$("#retake").hide();
+		$(".progress").hide();
 
 		function setQuestions(){
 		  // Re-enable all radio buttons for new set of questions and clear old answers
@@ -636,7 +640,11 @@
 		  // Show retake quiz button after 1st question page is done
 		  if (qCounter > 3) {
 			$("#retake").show();
-			// 
+			var bar = document.getElementsByClassName("progress-bar");
+			var prVal = Math.min(99,((qCounter / surveyLength)*(100)).toFixed(0));
+			bar[0].style.width = prVal+"%";
+			$(".progress-bar").html(prVal+"%");
+			$(".progress").show();
 		  }
 		}
 		
