--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
             header:hover a {
                 opacity: .6;
             }
+			
+	 tspan {
+    	font-size: 1.5em;
+  	  font-weight: 700;
+	}
             
 			/* CSS by Matthew Ball - matthewball.me */
 			
