--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/ >
-		<title>Footprint - IMS440D</title>
+		<title>Miami Footprint - IMS440D</title>
 
 		<!-- Google fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -439,7 +439,7 @@
 		</style>
 		
 		<header>
-			<a href="index.html"><img id="logo" src="img/logo.png" width="50" alt = "IMS440D - Footprint"/><span class="headerTitle">Footprint</span></a>
+			<a href="index.html"><img id="logo" src="img/logo.png" width="50" alt = "IMS440D - Footprint"/><span class="headerTitle">Miami Footprint</span></a>
 			<!-- src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8" -->
 		</header>
 		
