updated major descriptions

--- a/index.html
+++ b/index.html
@@ -451,35 +451,46 @@
 				<div id="major1" class="major">
 					<h3 id="major1Name"></h3>
 					<h5 id="major1Match"></h5>
-					<p id="major1Desc">This program focuses on changes in the brain, how families affect children, how people form impressions of other people, how people make decisions, how communities and cultures affect people’s lives.</p>
+					<p id="major1Desc">Majoring in psychology will help you gain skills that will be useful to you no matter what career you pursue. Employers want people who have: 
+						written communication skills, problem-solving skills, analytical/quantitative skills, leadership and mentoring skills, and teamwork skills. A major in psychology 
+						will help you develop these skill sets, which you can take anywhere.</p>
 					<a href="https://miamioh.edu/cas/academics/departments/psychology/academics/undergraduate-studies/psychology-major/" target="_blank">Click here for more information.</a>
 				</div>
 				<br><br>
 				<div id="major2" class="major">
 					<h3 id="major2Name"></h3>
 					<h5 id="major2Match"></h5>
-					<p id="major2Desc">This program is for students who enjoy chemistry and biology, and who want to explore how chemistry drives life processes</p>
+					<p id="major2Desc">Chemistry is the study of the composition, structure, and properties of substances and the changes they undergo. Chemists perform experiments, 
+						conduct research, and investigate and analyze substances, helping develop new products and adding new knowledge, not only to chemistry but also to fields as diverse 
+						as nanotechnology, materials science, polymer chemistry, energy production and biomedical engineering.</p>
 					<a href="http://miamioh.edu/cas/academics/departments/chemistry-biochemistry/academics/majors/chemistry-bs/" target="_blank">Click here for more information.</a>				
 				</div>
 				<br><br>
 				<div id="major3" class="major">
 					<h3 id="major3Name"></h3>
 					<h5 id="major3Match"></h5>
-					<p id="major3Desc">This program includes an interdisciplinary core of study in world politics, international economics, world history, political geography, intercultural relations (anthropology), and foreign language.</p>
+					<p id="major3Desc">International Studies (ITS) is at its heart an interdisciplinary approach to studying the world. We believe that most global problems and issues are 
+						too complex to be understood through a single disciplinary perspective. Students therefore take a series of courses from many academic departments including economics, 
+						anthropology, geography, history and political science.</p>
 					<a href="https://miamioh.edu/academics/majors-minors/majors/international-studies.html" target="_blank">Click here for more information.</a>
 				</div>
 				<br><br>
 				<div id="major4" class="major">
 					<h3 id="major4Name"></h3>
 					<h5 id="major4Match"></h5>
-					<p id="major4Desc">This program focuses on how we use our resources for the production, distribution, and consumption of goods and services.</p>
+					<p id="major4Desc">Economics is the study of how we use our resources for the production, distribution, and consumption of goods and services. Economists study problems 
+						such as inflation and unemployment. They analyze social institutions, banks, the stock market, the government and they look at problems connected with labor negotiations, 
+						taxes, international trade, and urban and environmental issues.</p>
 					<a href="https://miamioh.edu/academics/majors-minors/majors/economics.html" target="_blank">Click here for more information.</a>
 				</div>
 				<br><br>
 				<div id="major5" class="major">
 					<h3 id="major5Name"></h3>
 					<h5 id="major5Match"></h5>
-					<p id="major5Desc">This program focuses on how individuals and organizations use communication and media to negotiate their role in highly mediated societies.</p>
+					<p id="major5Desc">Strategic Communication is the study of how individuals and organizations use communication and media to negotiate their role in highly mediated societies. 
+						Public relations is a central aspect of strategic communication and involves the study of how organizations influence opinions and the behavior of key publics (e.g., employees, 
+						consumers, government, community, media) and how they try to respond and adapt to the concerns of these publics. The curriculum emphasizes an ethical approach to public 
+						relations and analyzes the impacts strategic communication practices have on societies.</p>
 					<a href="https://miamioh.edu/academics/majors-minors/majors/strategic-communication.html" target="_blank">Click here for more information.</a>
 				</div>
 				<br><br>
