--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 			</section>
 			<section id="interface" role="main" class="col-6">
 				<br>
-				<div id="instructions" class="instructions">Choose how you strongly you identify with the following statements:</div>
+				<div id="instructions" class="instructions">Choose how strongly you identify with the following statements:</div>
 				<br><br>
 				<div id="question1" class="question"></div>
 				<div id="answer1" class="answer">
