--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+        <link href="https://fonts.googleapis.com/css?family=Alike&display=swap" rel="stylesheet">
 		<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
@@ -38,6 +38,7 @@
 			}
 
 			.question {
+                font-family: 'Alike', serif !important;
 			    font-size:2em;
 			    padding:1em;
 			    text-align: center;
@@ -52,6 +53,7 @@
 			}
 
 			header {
+                font-family: 'Alike', serif !important;
 			    height: 14vh;
 			    padding:10px;
 			}
@@ -577,8 +579,8 @@
 		</div>
 
 		<footer>
-			<h3>IMS440D - Footprint</h3>
-			<h4>&copy;2019 - Armstrong Institute for Interactive Media Studies</h4>
+			<h3>Miami University Footprint</h3>
+			<h4>&copy;2019 - Interactive Media Studies 440D</h4>
 			<h5>For more information visit <a href="http://aims.miamioh.edu">aims.miamioh.edu</a></h5>
 		</footer>
 
